[package]
name = "todo_collection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sha2 = "0.11.0-pre.3"
hex = { version = "0.4.3", features = [] }
chrono = "0.4.33"
